[gd_scene load_steps=4 format=3 uid="uid://ikhqnr0b3rtv"]

[ext_resource type="Script" path="res://addons/egoventure/nodes/message_screen.gd" id="1_faumj"]

[sub_resource type="Animation" id="Animation_8vofh"]
resource_name = "message"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Screen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ticli"]
_data = {
"message": SubResource("Animation_8vofh")
}

[node name="MessageScreen" type="CanvasLayer"]
process_mode = 3
layer = 110
script = ExtResource("1_faumj")

[node name="Screen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 2560.0
offset_bottom = 1440.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="Screen"]
layout_mode = 0
offset_right = 2560.0
offset_bottom = 1440.0
mouse_filter = 2

[node name="Margin" type="MarginContainer" parent="Screen"]
layout_mode = 0
offset_right = 2560.0
offset_bottom = 1440.0
mouse_filter = 2

[node name="Message" type="Label" parent="Screen/Margin"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ticli")
}

[node name="DebugScreen" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 2560.0
offset_bottom = 1440.0
mouse_filter = 2

[node name="DebugMargin" type="MarginContainer" parent="DebugScreen"]
process_mode = 3
layout_mode = 0
offset_right = 2560.0
offset_bottom = 1440.0
mouse_filter = 2

[node name="DebugMessage" type="Label" parent="DebugScreen/DebugMargin"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 0
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
